--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -5,8 +5,9 @@ numpy<2
 pandas>=2.0.0
 plotly>=5.22.0
 Pillow>=10.0.0
-easyocr==1.7.1
+pytesseract>=0.3.10
 ultralytics==8.1.0
 torch>=2.0.0
 scipy==1.11.4
 av>=10.0.0
+openpyxl>=3.1.0
